grammar.js
    source_file: $ => seq(
      repeat($.include),
      seq(repeat($._one_decl), repeat($._one_package_or_model)),
    ),

    line_comment: _ => /--.*/,
    // Note: block comments cannot be nested as per the spec, no need for a non-context-free scanner
    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    block_comment: _ => token(choice(
      // Pascal/SML-style block comments
      seq(
        '(*',
        /[^*]*\*+([^)*][^*]*\*+)*/,
        ')',
      ),
      // C-style block comments
      seq(
        '/*',
        /[^*]*\*+([^/*][^*]*\*+)*/,
        '/',
      ),
    )),
    string: _ => /"[^"]*"/,

    include: $ => seq('include', field('source', $.string)),
    _one_decl: $ => choice($.node_decl, $.type_decl, $.const_decl, $.ext_node_decl),

    // Package rules

    _one_package_or_model: $ => choice($.package_decl, $.model_decl),
    _identifier: _ => /[_a-zA-Z][_'a-zA-Z0-9]*/,

    // Ident rules

    identifier: $ => prec.right(20, seq($._identifier, repeat($.pragma))),
    pragma: $ => seq(
      '%',
      field('key', alias($._identifier, $.identifier)),
      ':',
      field('value', alias($._identifier, $.identifier)),
      '%',
    ),

    // Node rules

    const_decl: $ => seq('const', repeat1(seq($.one_const_decl, ';'))),
    one_const_decl: $ => choice(
      seq(separated1(field('name', $.identifier), ','), ':', field('type', $._type)),
      seq(field('name', $.identifier), ':', field('type', $._type), '=', field('value', $._expression)),
      seq(field('name', $.identifier), '=', field('value', $._expression)),
    ),

    // Type decl rules

    type_decl: $ => seq('type', repeat1(seq($.one_type_decl, ';'))),
    one_type_decl: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('type', $._one_type_decl_value))),
    ),
    _one_type_decl_value: $ => choice(
      $._type,
      $.enum_type_value,
      $.struct_type_value,
    ),
    _type: $ => choice(
      $.identifier_type,
      $.primitive_type,
      $.table_type,
    ),
    primitive_type: _ => choice('bool', 'int', 'real'),
    _expression: $ => choice(
      $._expression1,
      alias($.comparison_expression, $.binary_expression),
      alias($.binary_expression0, $.binary_expression),
    ),

    boolean_literal: _ => choice('true', 'false'),
    integer_literal: _ => /\d+/,
    real_literal: $ => {
      const _real_exponent = /[eE][+\-]?\d+/;

      return choice($._single_dot_real_literal, token.immediate(choice(
        seq(/\d+/, _real_exponent),
        seq(/\d+\./, _real_exponent),
        seq(/\d+\.\d+/, optional(_real_exponent)),
        seq(/\.\d+/, optional(_real_exponent))
      )));
    },
